--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <main class="page">
          <section class="page__main main">
             <div class="main__container">
-               <div class="main__body _anim-items _anim-no-hide">
+               <div class="main__body">
                   <a href="#" class="main__logo">Лого</a>
                   <h1 class="main__title">Стоматологическая клиника</h1>
                   <div class="main__text text">
@@ -47,7 +47,7 @@
                   <a href="tel:+79999999999" class="main__btn btn"><span>Позвонить</span></a>
                </div>
             </div>
-            <div class="main__decor decor _anim-items _anim-no-hide">
+            <div class="main__decor decor">
                <div class="decor__item decor__item--1" data-prlx-mouse data-prlx-cx="40" data-prlx-cy="40">
                   <img src="img/main/pearl.png" alt="Жемчуг">
                </div>
@@ -95,7 +95,7 @@
             </div>
          </section>
          <section class="page__about about">
-            <div class="about__container _anim-items _anim-no-hide">
+            <div class="about__container ">
                <h2 class="about__title title">О нас</h2>
                <div class="about__body">
                   <div class="about__text text">
@@ -103,7 +103,7 @@
                      <p>Наша клиника была основана опытными стоматологами, которые стремятся предоставлять высококачественные услуги и индивидуальный подход к каждому пациенту. Мы постоянно совершенствуем наши знания и навыки, посещая семинары и конференции, а также участвуем в научных исследованиях.</p>
                      <p>В нашей клинике работают специалисты разных профилей: терапевты, хирурги, ортопеды, ортодонты и гигиенисты. Мы предлагаем комплексное лечение, включая диагностику, планирование лечения и контроль результатов.</p>
                   </div>
-                  <div class="about__content _anim-items _anim-no-hide">
+                  <div class="about__content ">
                      <div class="about__slider swiper">
                         <div class="about__wrapper swiper-wrapper">
                            <div class="about__slide swiper-slide slide-about">
@@ -137,7 +137,7 @@
             </div>
          </section>
          <section class="page__services services">
-            <div class="services__container _anim-items _anim-no-hide">
+            <div class="services__container ">
                <h2 class="services__title title">Услуги</h2>
                <div class="services__body">
                   <div class="services__column">
@@ -265,10 +265,10 @@
             </div>
          </section>
          <section class="page__advantages advantages">
-            <div class="advantages__container _anim-items _anim-no-hide">
+            <div class="advantages__container ">
                <h2 class="advantages__title title">Преимущества</h2>
                <div class="advantages__row">
-                  <div class="advantages__content _anim-items _anim-no-hide">
+                  <div class="advantages__content ">
                      <div class="advantages__slider swiper">
                         <div class="advantages__wrapper swiper-wrapper">
                            <div class="advantages__slide swiper-slide slide-advantages">
@@ -335,7 +335,7 @@
             </div>
          </section>
          <section class="page__team team">
-            <div class="team__container _anim-items _anim-no-hide">
+            <div class="team__container ">
                <h2 class="team__title title">Наша команда</h2>
                <div class="team__body">
                   <div class="team__slider swiper">
