--- a/index.html
+++ b/index.html
@@ -476,10 +476,10 @@
                      <li class="contacts__item">
                         <svg  viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg" data-name="Layer 1">
                            <g fill-rule="evenodd">
-                              <path
+                              <path class="yellow"
                                  d="m32.371 205.113c-8.213-19.721-14.707-40.863-17.232-62.12-3.217-27.074.149-54.442 15.833-77.4a88.139 88.139 0 0 1 8.569-10.222c3.762-4 7.688-7.871 11.641-11.685 3.223-3.11 6.478-6.186 9.734-9.26 3.857-3.643 7.735-7.29 11.488-11.04a32.2 32.2 0 0 1 45.427 0l77.092 77.068a32.161 32.161 0 0 1 0 45.42l-21 20.958a43.869 43.869 0 0 0 -7.754 51.887 306.043 306.043 0 0 0 127.162 127.142 43.88 43.88 0 0 0 51.87-7.77l20.948-20.957a32.2 32.2 0 0 1 45.428 0l77.092 77.078a32.17 32.17 0 0 1 0 45.409c-3.756 3.76-7.419 7.632-11.067 11.5-3.072 3.254-6.145 6.506-9.253 9.725-3.814 3.953-7.683 7.877-11.687 11.638a88.316 88.316 0 0 1 -10.223 8.567 95.7 95.7 0 0 1 -36.429 14.882c-34.077 6.484-71.683-3.2-103.062-16.276-28.524-11.885-55.786-27.972-81-45.76a615.921 615.921 0 0 1 -80.011-67.765 615.4 615.4 0 0 1 -67.807-80.022c-17.791-25.217-33.88-52.476-45.759-80.997z"
                                  fill="#28c5fc"></path>
-                              <path
+                              <path class="blue"
                                  d="m487.255 438.206c-3.187 3.178-7.029 7.241-11.107 11.538-10.169 10.793-22.869 24.21-30.836 29.651-41.9 28.63-97.947 14.931-137.594-1.588-52.3-21.792-109.241-61.96-160.37-113.093-51.176-51.139-91.339-108.1-113.131-160.37-16.5-39.657-30.227-95.721-1.593-137.627 5.436-7.972 18.886-20.653 29.665-30.842 4.312-4.063 8.342-7.9 11.529-11.078a30.2 30.2 0 0 1 42.6 0l77.092 77.068a30.2 30.2 0 0 1 0 42.591l-20.995 20.957a45.874 45.874 0 0 0 -8.107 54.241 307.954 307.954 0 0 0 127.985 127.973 45.848 45.848 0 0 0 54.222-8.122l20.949-20.958a30.2 30.2 0 0 1 42.6 0l77.092 77.078a30.186 30.186 0 0 1 0 42.581zm24.7-18.389v-5.8a45.9 45.9 0 0 0 -13.4-29.706l-77.092-77.074a46.151 46.151 0 0 0 -65.189 0l-20.953 20.963a29.606 29.606 0 0 1 -35.429 5.3 291.893 291.893 0 0 1 -121.333-121.353 29.568 29.568 0 0 1 5.3-35.425l20.941-20.958a46.135 46.135 0 0 0 0-65.212l-77.088-77.078a46.176 46.176 0 0 0 -65.189 0c-3.046 3.023-7.029 6.791-11.2 10.77-11.951 11.271-25.495 24.056-31.915 33.456-25.822 37.848-25.822 90.693.047 152.8 22.588 54.156 63.97 112.948 116.552 165.53s111.35 93.967 165.525 116.537c31.071 12.963 59.846 19.43 85.527 19.43s48.364-6.458 67.3-19.387c9.372-6.411 22.166-19.941 33.414-31.873 3.983-4.208 7.779-8.187 10.779-11.21a45.9 45.9 0 0 0 13.401-29.71z"
                                  fill="#3a6376"></path>
                            </g>
@@ -491,10 +491,8 @@
                      </li>
                      <li class="contacts__item">
                         <svg id="Layer_2" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg">
-                           <rect fill="#97d8e8" height="20" rx="2" width="26" x="3" y="6"></rect>
-                           <path
-                              d="m27 5h-22c-1.654 0-3 1.346-3 3v16c0 1.654 1.346 3 3 3h22c1.654 0 3-1.346 3-3v-16c0-1.654-1.346-3-3-3zm-23 3.336 5.645 5.003-5.645 9.677zm1.507-1.336h20.986l-10.023 8.883c-.292.154-.648.154-.94 0zm5.664 7.692 3.106 2.753.133.1c.483.302 1.036.453 1.59.453s1.107-.151 1.59-.453l3.234-2.861 6.018 10.317h-21.684l6.013-10.308zm11.18-1.36 5.649-4.997v14.681z"
-                              fill="#1790a7"></path>
+                           <rect class="yellow" height="20" rx="2" width="26" x="3" y="6"></rect>
+                           <path class="blue" d="m27 5h-22c-1.654 0-3 1.346-3 3v16c0 1.654 1.346 3 3 3h22c1.654 0 3-1.346 3-3v-16c0-1.654-1.346-3-3-3zm-23 3.336 5.645 5.003-5.645 9.677zm1.507-1.336h20.986l-10.023 8.883c-.292.154-.648.154-.94 0zm5.664 7.692 3.106 2.753.133.1c.483.302 1.036.453 1.59.453s1.107-.151 1.59-.453l3.234-2.861 6.018 10.317h-21.684l6.013-10.308zm11.18-1.36 5.649-4.997v14.681z"></path>
                         </svg>
                         <address>
                            <a href="mailto:stomatologia@stomatologia.ru" class="text">stomatologia@stomatologia.ru</a>
@@ -505,19 +503,19 @@
                            xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512"
                            style="enable-background:new 0 0 512 512;" xml:space="preserve">
                            <g>
-                              <polygon points="0,485 233.392,485 97.248,348.856 "
+                              <polygon class="yellow" points="0,485 233.392,485 97.248,348.856 "
                                  fill="#32BEA6"></polygon>
-                              <polygon points="278.608,485 512,485 415.936,347.688 "
+                              <polygon class="yellow" points="278.608,485 512,485 415.936,347.688 "
                                  fill="#32BEA6"></polygon>
-                              <path
+                              <path class="yellow" 
                                  d="M395.984,345h-91.552c-15.696,23.04-28.384,39.952-32.064,44.848L256,411.336l-16.272-21.488 C236,384.984,223.28,368.072,207.552,345h-91.536L256,484.984L395.984,345z"
                                  fill="#32BEA6"></path>
                            </g>
-                           <path
+                           <path class="blue"
                               d="M256,411.336l16.368-21.488c3.696-4.896,16.368-21.808,32.064-44.848 c34.816-51.088,84.592-132.416,84.592-180.368C389.024,81.032,336.832,27,256,27S122.976,81.032,122.976,164.632 c0,48,49.712,129.312,84.576,180.368c15.744,23.056,28.464,39.968,32.176,44.848L256,411.336z M255.904,122.472 c23.792,0,43.072,19.28,43.072,43.072s-19.28,43.072-43.072,43.072s-43.072-19.28-43.072-43.072 C212.816,141.752,232.112,122.472,255.904,122.472z"
                               fill="#E04F5F"></path>
                            <g>
-                              <circle cx="255.904" cy="165.544" r="43.072"
+                              <circle class="yellow" cx="255.904" cy="165.544" r="43.072"
                                  fill="#FFFFFF"></circle>
                            </g>
                         </svg>
@@ -533,114 +531,114 @@
                            <g>
                               <g>
                                  <g>
-                                    <path
+                                    <path class="blue"
                                        d="m67.001 35.004c0 17.667-14.326 31.993-31.993 31.993-17.681 0-32.007-14.326-32.007-31.993 0-17.681 14.326-32.007 32.007-32.007 17.667 0 31.993 14.326 31.993 32.007z"
                                        fill="#2297f3"></path>
                                  </g>
                               </g>
                               <g>
                                  <g>
-                                    <path
+                                    <path class="blue"
                                        d="m42.759 66.052c-2.48.62-5.08.95-7.75.95-17.68 0-32.01-14.33-32.01-32 0-17.68 14.33-32 32.01-32 2.67 0 5.27.33 7.75.95-13.94 3.46-24.26 16.04-24.26 31.05 0 15 10.32 27.59 24.26 31.05z"
                                        fill="#0e88db"></path>
                                  </g>
                               </g>
                               <g>
                                  <g>
-                                    <path
+                                    <path class="blue"
                                        d="m60.794 35.003c0 14.24-11.547 25.787-25.787 25.787-14.251 0-25.798-11.547-25.798-25.787 0-14.251 11.547-25.798 25.798-25.798 14.24 0 25.787 11.547 25.787 25.798z"
                                        fill="#d9defb"></path>
                                  </g>
                               </g>
                               <g>
                                  <g>
-                                    <path
+                                    <path class="yellow"
                                        d="m60.794 35.003c0 .354-.011.719-.021 1.073-.161 3.918-1.192 7.6-2.92 10.874-.322.644-.687 1.267-1.073 1.868-2.029 3.199-4.755 5.925-7.965 7.954-.601.397-1.224.751-1.857 1.073-3.274 1.728-6.967 2.759-10.885 2.92-.354.011-.708.021-1.063.021-.365 0-.719-.011-1.084-.021-3.918-.161-7.611-1.202-10.885-2.92-.644-.333-1.256-.687-1.857-1.073-3.21-2.029-5.936-4.755-7.965-7.954-.386-.601-.751-1.224-1.073-1.868-1.728-3.274-2.759-6.956-2.92-10.874-.011-.354-.021-.719-.021-1.073s.011-.719.021-1.073c.161-3.918 1.192-7.611 2.92-10.885.322-.644.687-1.267 1.073-1.868 2.04-3.199 4.755-5.925 7.965-7.954.601-.386 1.213-.741 1.857-1.073 3.274-1.717 6.967-2.759 10.885-2.92.365-.011.719-.021 1.084-.021.354 0 .709.011 1.063.021 3.918.161 7.611 1.192 10.885 2.92.633.322 1.256.676 1.857 1.073 3.199 2.029 5.925 4.745 7.965 7.954.386.601.751 1.224 1.073 1.868 1.728 3.274 2.759 6.967 2.92 10.885.01.354.021.719.021 1.073z"
                                        fill="#d9defb"></path>
                                  </g>
                               </g>
                               <g>
                                  <g>
-                                    <path
+                                    <path class="yellow"
                                        d="m42.116 59.789c-2.254.655-4.637.998-7.106.998-14.255 0-25.806-11.54-25.806-25.784 0-14.255 11.55-25.795 25.806-25.795 2.469 0 4.852.344 7.106.998-10.799 3.07-18.689 13.01-18.689 24.797 0 11.776 7.89 21.716 18.689 24.786z"
                                        fill="#c5cced"></path>
                                  </g>
                               </g>
                               <g>
                                  <g>
-                                    <path
+                                    <path class="blue"
                                        d="m36.072 9.229v2.555c0 .59-.483 1.073-1.073 1.073s-1.073-.483-1.073-1.073v-2.555c.365-.011.719-.021 1.084-.021.354 0 .708.011 1.062.021z"
                                        fill="#445a66"></path>
                                  </g>
                                  <g>
-                                    <path
+                                    <path class="blue"
                                        d="m23.932 15.82c-.172.097-.354.15-.537.15-.365 0-.73-.193-.934-.537l-1.277-2.211c.601-.386 1.213-.741 1.857-1.073l1.288 2.211c.29.516.118 1.171-.397 1.46z"
                                        fill="#445a66"></path>
                                  </g>
                                  <g>
-                                    <path
+                                    <path class="blue"
                                        d="m15.827 23.925c-.193.344-.558.537-.934.537-.182 0-.365-.043-.537-.14l-2.211-1.277c.322-.644.687-1.267 1.073-1.868l2.211 1.288c.516.29.699.945.398 1.46z"
                                        fill="#445a66"></path>
                                  </g>
                                  <g>
-                                    <path
+                                    <path class="blue"
                                        d="m12.864 35.003c0 .59-.483 1.073-1.073 1.073h-2.566c-.011-.354-.021-.719-.021-1.073s.011-.719.021-1.073h2.566c.59-.001 1.073.472 1.073 1.073z"
                                        fill="#445a66"></path>
                                  </g>
                                  <g>
-                                    <path
+                                    <path class="blue"
                                        d="m15.43 47.53-2.211 1.288c-.386-.601-.751-1.224-1.073-1.868l2.211-1.277c.515-.301 1.17-.118 1.471.397.3.515.117 1.17-.398 1.46z"
                                        fill="#445a66"></path>
                                  </g>
                                  <g>
-                                    <path
+                                    <path class="blue"
                                        d="m24.329 55.635-1.288 2.211c-.644-.333-1.256-.687-1.857-1.073l1.277-2.211c.301-.515.955-.687 1.471-.386.515.288.687.943.397 1.459z"
                                        fill="#445a66"></path>
                                  </g>
                                  <g>
-                                    <path
+                                    <path class="blue"
                                        d="m36.072 58.211v2.555c-.354.011-.708.021-1.063.021-.365 0-.719-.011-1.084-.021v-2.555c0-.59.483-1.073 1.073-1.073s1.074.482 1.074 1.073z"
                                        fill="#445a66"></path>
                                  </g>
                                  <g>
-                                    <path
+                                    <path class="blue"
                                        d="m48.814 56.772c-.601.397-1.224.751-1.857 1.073l-1.277-2.211c-.301-.515-.118-1.17.386-1.46.515-.301 1.17-.129 1.471.386z"
                                        fill="#445a66"></path>
                                  </g>
                                  <g>
-                                    <path
+                                    <path class="blue"
                                        d="m57.853 46.95c-.322.644-.687 1.267-1.073 1.868l-2.211-1.288c-.515-.29-.687-.945-.397-1.46.301-.515.955-.698 1.471-.397z"
                                        fill="#445a66"></path>
                                  </g>
                                  <g>
-                                    <path
+                                    <path class="blue"
                                        d="m60.794 35.003c0 .354-.011.719-.021 1.073h-2.555c-.601 0-1.073-.483-1.073-1.073 0-.601.472-1.073 1.073-1.073h2.555c.01.354.021.719.021 1.073z"
                                        fill="#445a66"></path>
                                  </g>
                                  <g>
-                                    <path
+                                    <path class="blue"
                                        d="m57.853 23.045-2.211 1.277c-.172.097-.354.14-.537.14-.376 0-.73-.193-.934-.537-.29-.515-.118-1.17.397-1.46l2.211-1.288c.387.601.751 1.224 1.074 1.868z"
                                        fill="#445a66"></path>
                                  </g>
                                  <g>
-                                    <path
+                                    <path class="blue"
                                        d="m48.814 13.223-1.277 2.211c-.193.343-.558.537-.934.537-.182 0-.365-.054-.537-.15-.504-.29-.687-.945-.386-1.46l1.277-2.211c.633.321 1.256.675 1.857 1.073z"
                                        fill="#445a66"></path>
                                  </g>
                                  <g>
-                                    <path
+                                    <path class="blue"
                                        d="m48.477 36.071h-13.478c-.593 0-1.073-.48-1.073-1.073v-15.992c0-.593.481-1.073 1.073-1.073s1.073.48 1.073 1.073v14.918h12.405c.593 0 1.073.48 1.073 1.073.001.594-.48 1.074-1.073 1.074z"
                                        fill="#445a66"></path>
                                  </g>
                                  <g>
-                                    <path
+                                    <path class="blue"
                                        d="m23.395 44.728c-.317 0-.631-.139-.843-.408-.367-.465-.288-1.141.177-1.508l10.249-8.095c.464-.366 1.139-.288 1.507.177.367.465.288 1.141-.177 1.508l-10.248 8.095c-.197.155-.431.231-.665.231z"
                                        fill="#445a66"></path>
                                  </g>
                               </g>
                               <g>
                                  <g>
-                                    <path
+                                    <path class="blue"
                                        d="m38.27 34.993c0 1.81-1.46 3.279-3.271 3.279-1.801 0-3.271-1.469-3.271-3.279 0-1.801 1.469-3.271 3.271-3.271 1.81 0 3.271 1.47 3.271 3.271z"
                                        fill="#3b515b"></path>
                                  </g>
