--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@
                      <li class="contacts__item">
                         <svg version="1.1"  xmlns="http://www.w3.org/2000/svg"
                            xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512"
-                           style="enable-background:new 0 0 512 512;" xml:space="preserve">
+                           xml:space="preserve">
                            <g>
                               <polygon class="yellow" points="0,485 233.392,485 97.248,348.856 "
                                  fill="#32BEA6"></polygon>
@@ -526,7 +526,7 @@
                         </address>
                      </li>
                      <li class="contacts__item">
-                        <svg  enable-background="new 0 0 70 70" viewBox="0 0 70 70"
+                        <svg viewBox="0 0 70 70"
                            xmlns="http://www.w3.org/2000/svg">
                            <g>
                               <g>
