--- a/index.html
+++ b/index.html
@@ -645,7 +645,7 @@
                               </g>
                            </g>
                         </svg>
-                        <time class="text">Время работы пн.- пт.: 9:00 - 21:00</time>
+                        <span class="text">Время работы пн.- пт.: 9:00 - 21:00</span>
                      </li>
                   </ul>
                   <div class="contacts__map">
